added post header

--- a/_layouts/recentreadings.html
+++ b/_layouts/recentreadings.html
@@ -2,6 +2,7 @@
 layout: base
 ---
 <h3>{{page.title}}</h3>
+{% include components/post_header.html %}
 <p>
 <a href="{{page.readurl}}">{{page.readurl}}</a>
 <br/>
