--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -32,6 +32,11 @@ h3, h4, h5, h6 {
   color:#494949;
 }
 
+h6 {
+  font-size: 8px;
+  text-align: right;
+}
+
 a {
   color:#39c;
   font-weight:400;
