updating for stretchboard

--- a/_includes/components/navbar.html
+++ b/_includes/components/navbar.html
@@ -17,6 +17,7 @@
 
 <h4>Open Source</h4>
   <a href="https://github.com/adamgilman/python-lockitron">Lockitron Python API</a><br/>
+  <a href="https://github.com/adamgilman/stretchboard">stretchboard</a><br/>
 <hr/>
 
 <h4>Contact Me</h4>
