--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,9 +25,8 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <a class="sidebar-nav-item" href="https://github.com/adamgilman">github</a>
+    <a class="sidebar-nav-item" href="https://www.linkedin.com/profile/view?id=6666592">linkedin</a>
   </nav>
 
   <div class="sidebar-item">
