--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,17 +16,21 @@
       `layout: page` in the front-matter. See readme for usage.
     {% endcomment %}
 
-    {% assign pages_list = site.pages | sort:"url" %}
-    {% for node in pages_list %}
-      {% if node.title != null %}
-        {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
 
     <a class="sidebar-nav-item" href="https://github.com/adamgilman">github</a>
     <a class="sidebar-nav-item" href="https://www.linkedin.com/profile/view?id=6666592">linkedin</a>
+
+    <span class="sidebar-nav-item">
+      research projects
+      {% assign pages_list = site.pages | sort:"url" %}
+      {% for node in pages_list %}
+        {% if node.title != null %}
+          {% if node.layout == "page" %}
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
+  </span>
 
     <span class="sidebar-nav-item">
       past products
