--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,7 +18,7 @@
 
 
     <a class="sidebar-nav-item" href="https://github.com/adamgilman">github</a>
-    <a class="sidebar-nav-item" href="https://www.linkedin.com/profile/view?id=6666592">linkedin</a>
+    <a class="sidebar-nav-item" href="https://www.linkedin.com/in/adamgilman/">linkedin</a>
 
   </nav>
 
